<?xml version="1.0" encoding="utf-8"?>
<resources >

    <string name="app_name">AutoChecker</string>
    <string name="action_settings">Settings</string>
    <string name="week_day">Week day</string>
    <string name="location_name">Name</string>
    <string name="inside_location">Dins</string>
    <string name="outside_location">Fora</string>
    <string name="empty_locations_list">No hi ha cap ubicacio</string>
    <string name="first_last_day_record">00:00 - 00:00</string>
    <string name="record_duration">00:00</string>
    <string name="total_duration">Total:</string>
    <string name="not_title">Avis d\'exces de temps a</string>
    <string name="not_content_1">Portes mes de </string>
    <string name="not_content_2"> hores a </string>
    <string name="title_activity_auto_checker_locations">AutoCheckerLocationsActivity</string>

</resources>
