<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp" 
    android:paddingRight="5dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp" >

    <TextView
        android:id="@+id/location_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_toStartOf="@+id/location_status"
        android:layout_toLeftOf="@+id/location_status"
        android:focusable="false"
        android:gravity="center_vertical"
        android:text="@string/location_name"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="@dimen/week_day_dim" />

    <Switch
        android:id="@+id/location_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/location_name"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/location_name"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:textOff="@string/outside_location"
        android:textOn="@string/inside_location"
        android:clickable="false" 
        android:focusable="false" />

</RelativeLayout>